--- a/server/pom.xml
+++ b/server/pom.xml
@@ -54,6 +54,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+            </plugin>
         </plugins>
     </build>
 
